--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -24,25 +24,20 @@
       <p>{{site.location}}</p>
     </section>
     <section>
-      <h3>Phone</h3>
-      <p><a href="tel:{{site.phone}}">{{site.phone}}</a></p>
-    </section>
-    <section>
       <h3>Email</h3>
       <p><a href="mailto:{{site.email}}">{{site.email}}</a></p>
     </section>
     <section>
       <h3>Social</h3>
-      <ul class="icons alt">
-        <li><a href="https://twitter.com/{{site.twitter}}" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
-        <li><a href="https://facebook.com/{{site.facebook}}" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
-        <li><a href="https://instagram.com/{{site.instagram}}" class="icon fa-instagram" rel="nofollow"><span class="label">Instagram</span></a></li>
-        <li><a href="https://github.com/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
-      </ul>
+          <ul class="icons">
+                  <li><a href="https://twitter.com/sunbingfeng2" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
+                  <li><a href="https://facebook.com/sun.bill.3" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
+                  <li><a href="https://github.com/sunbingfeng" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
+          </ul>
     </section>
   </section>
 </footer>
 <!-- Copyright -->
 <div id="copyright">
-  <ul><li>&copy; HTML5 UP</li><li>Design by <a href="https://html5up.net">HTML5 UP</a></li><li>Jekyll Integration by <a href="https://somiibo.com">Somiibo</a></li></ul>
+  <ul><li>&copy; Bill</li><li>All rights reserved</li></ul>
 </div>
