--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,12 +24,11 @@
 
             {% include nav.html %}
 
-						<ul class="icons">
-              <li><a href="https://twitter.com/{{site.twitter}}" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
-              <li><a href="https://facebook.com/{{site.facebook}}" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
-              <li><a href="https://instagram.com/{{site.instagram}}" class="icon fa-instagram" rel="nofollow"><span class="label">Instagram</span></a></li>
-              <li><a href="https://github.com/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
-						</ul>
+            <ul class="icons">
+                  <li><a href="https://twitter.com/sunbingfeng2" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
+                  <li><a href="https://facebook.com/sun.bill.3" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
+                  <li><a href="https://github.com/sunbingfeng" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
+            </ul>
 					</nav>
 
 				<!-- Main -->
@@ -73,7 +72,7 @@
 					<!-- Footer -->
 						<footer>
               <ul class="actions">
-                <li><a href="{{ "/blog/" | absolute_url }}" class="button">Our Blog</a></li>
+                <li><a href="{{ "/blog/" | absolute_url }}" class="button">Return</a></li>
               </ul>
 						</footer>
 					</div>
