--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -26,12 +26,9 @@
           <article class="post featured">
             <header class="major">
               <h2><a href="#"></a></h2>
-              <p>Welcome
+              <p> “Truth can only be found in one place: the code.” 
 							</p>
             </header>
-						<p>
-							All posts are here
-						<p>
 
           </article>
 					<!-- Post -->
