--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,7 @@
       				<h1>{{page.title}}</h1>
       				<p>{{page.excerpt}}</p>
       			</header>
-      			<div class="image main"><img src="{{page.image}}" alt=""></div>
+      			<div style="text-align: center;"><img src="{{page.image}}" alt=""></div>
       			<p>{{content}}</p>
       		</section>
 
