--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,6 +5,7 @@
   Jekyll integration by somiibo.com
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
 <html>
 	<head>
     {% include head.html %}
@@ -72,7 +73,7 @@
 					<!-- Footer -->
 						<footer>
               <ul class="actions">
-                <li><a href="{{ "/blog/" | absolute_url }}" class="button">Return</a></li>
+                <li><a href="{{ "/blog" | absolute_url }}" class="button">Return</a></li>
               </ul>
 						</footer>
 					</div>
