--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,6 +5,11 @@
   Jekyll integration by somiibo.com
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
+<head>
+	<title>Bill's Tech Blog</title>
+</head>
+
 <html>
 	<head>
     {% include head.html %}
