1.fix syntax error in config file
2.add google analysis

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -30,9 +30,9 @@
     <section>
       <h3>Social</h3>
           <ul class="icons">
-                  <li><a href="https://twitter.com/sunbingfeng2" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
-                  <li><a href="https://facebook.com/sun.bill.3" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
-                  <li><a href="https://github.com/sunbingfeng" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
+                  <li><a href="https://twitter.com/{{site.twitter}}" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
+                  <li><a href="https://facebook.com/{{site.facebook}}" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
+                  <li><a href="https://github.com/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
           </ul>
     </section>
   </section>
