--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,43 +1,48 @@
 <footer id="footer">
-  <section>
-    <form method="POST" action="https://formspree.io/{{site.email}}">
-      <div class="field">
-        <label for="name">Name</label>
-        <input type="text" name="name" id="name" />
-      </div>
-      <div class="field">
-        <label for="email">Email</label>
-        <input type="text" name="email" id="email" />
-      </div>
-      <div class="field">
-        <label for="message">Message</label>
-        <textarea name="message" id="message" rows="3"></textarea>
-      </div>
-      <ul class="actions">
-        <li><input type="submit" value="Send Message" /></li>
-      </ul>
-    </form>
-  </section>
-  <section class="split contact">
-    <section class="alt">
-      <h3>Location</h3>
-      <p>{{site.location}}</p>
-    </section>
     <section>
-      <h3>Email</h3>
-      <p><a href="mailto:{{site.email}}">{{site.email}}</a></p>
+        <form method="POST" action="https://formspree.io/{{site.email}}">
+            <div class="field">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name" />
+            </div>
+            <div class="field">
+                <label for="email">Email</label>
+                <input type="text" name="email" id="email" />
+            </div>
+            <div class="field">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" rows="3"></textarea>
+            </div>
+            <ul class="actions">
+                <li>
+                    <input type="submit" value="Send Message" />
+                </li>
+            </ul>
+        </form>
     </section>
-    <section>
-      <h3>Social</h3>
-          <ul class="icons">
-                  <li><a href="https://twitter.com/{{site.twitter}}" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
-                  <li><a href="https://facebook.com/{{site.facebook}}" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
-                  <li><a href="https://github.com/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
-          </ul>
+    <section class="split contact">
+        <section class="alt">
+            <h3>Location</h3>
+            <p>{{site.location}}</p>
+        </section>
+        <section>
+            <h3>Email</h3>
+            <p><a href="mailto:{{site.email}}">{{site.email}}</a></p>
+        </section>
+        <section>
+            <h3>Social</h3>
+            <ul class="icons">
+                <li><a href="https://twitter.com/{{site.twitter}}" class="icon fa-twitter" rel="nofollow"><span class="label">Twitter</span></a></li>
+                <li><a href="https://facebook.com/{{site.facebook}}" class="icon fa-facebook" rel="nofollow"><span class="label">Facebook</span></a></li>
+                <li><a href="https://github.com/{{site.github}}" class="icon fa-github" rel="nofollow"><span class="label">GitHub</span></a></li>
+            </ul>
+        </section>
     </section>
-  </section>
 </footer>
 <!-- Copyright -->
 <div id="copyright">
-  <ul><li>&copy; Bill</li><li>All rights reserved</li></ul>
+    <ul>
+        <li>&copy; Bill</li>
+        <li>All rights reserved</li>
+    </ul>
 </div>
