--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@ Jekyll integration by somiibo.com
                     <h1>{{page.title}}</h1>
                     <p>{{page.excerpt}}</p>
                 </header>
-                <div style="text-align: center;"><img src="{{page.image}}" alt=""></div>
+                <!-- <div style="text-align: center;"><img src="{{page.image}}" alt=""></div> -->
                 <p>{{content}}</p>
             </section>
             <div class="comments-wrapper">
