--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,28 +38,31 @@ Jekyll integration by somiibo.com
                 <!-- <div style="text-align: center;"><img src="{{page.image}}" alt=""></div> -->
                 <p>{{content}}</p>
             </section>
-            <div class="comments-wrapper">
+
+            {% if page.comments %}
                 <div id="disqus_thread"></div>
                 <script>
+
                 /**
-                 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-                 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables
-                 */
-                var disqus_config = function() {
-                    this.page.url = '{{site.disqus_shortname}}{{ page.url }}'; /*Replace PAGE_URL with your page's canonical URL variable*/
-                    this.page.identifier = '{{ page.url }}'; /*Replace PAGE_IDENTIFIER with your page's unique identifier variable*/
+                *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+                /*
+                var disqus_config = function () {
+                this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+                this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
                 };
-                (function() { /* dont endit below this line */
-                    var d = document,
-                        s = d.createElement('script');
-                    s.src = 'https://{{site.disqus_shortname}}.disqus.com/embed.js';
-                    s.setAttribute('data-timestamp', +new Date());
-                    (d.head || d.body).appendChild(s);
+                */
+                (function() { // DON'T EDIT BELOW THIS LINE
+                var d = document, s = d.createElement('script');
+                s.src = 'https://sunbingfeng-blog.disqus.com/embed.js';
+                s.setAttribute('data-timestamp', +new Date());
+                (d.head || d.body).appendChild(s);
                 })();
                 </script>
-                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-            </div>
-            <!-- /.comments-wrapper -->
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+            
+            {% endif %}
+
             <!-- Footer -->
             <footer>
                 <ul class="actions">
@@ -68,7 +71,7 @@ Jekyll integration by somiibo.com
             </footer>
         </div>
         <!-- Footer -->
-        {% include foot.html %}
+        <!-- {% include foot.html %} -->
     </div>
     <!-- Scripts -->
     {% include scripts-main.html %} {% include tracking.html %}
