--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,3 +16,7 @@
 <!-- CSS -->
 <link rel="stylesheet" href="{{ "/assets/css/main.css" | absolute_url }}" />
 <noscript><link rel="stylesheet" href="{{ "/assets/css/noscript.css" | absolute_url }}" /></noscript>
+
+{% if site.tags != "" %}
+  {% include collecttags.html %}
+{% endif %}
