--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,8 +35,33 @@ Jekyll integration by somiibo.com
                     <h1>{{page.title}}</h1>
                     <p>{{page.excerpt}}</p>
                 </header>
-                <!-- <div style="text-align: center;"><img src="{{page.image}}" alt=""></div> -->
+                <span>[
+                  {% for tag in page.tags %}
+                    {% capture tag_name %}{{ tag }}{% endcapture %}
+                    <a class="no-underline" href="/tag/{{ tag_name }}"><code class="highligher-rouge"><nobr>{{ tag_name }}</nobr></code>&nbsp;</a> 
+                  {% endfor %}
+                ]</span>
                 <p>{{content}}</p>
+                <!-- {% include archive.html %} -->
+                <div class="related">
+                    <h2>Related Posts</h2>
+                    <ul class="related-posts">
+                    {% for post in site.related_posts limit:3 %}
+                      {% if post.lang %}
+                      <li lang="{{ post.lang }}">
+                      {% else %}
+                      <li>
+                      {% endif %}
+                        <h4>
+                          <a href="{{ post.url }}">
+                            {{ post.title }}
+                            <!-- <small>{{ post.date | date_to_string }}</small> -->
+                          </a>
+                        </h3>
+                      </li>
+                    {% endfor %}
+                    </ul>
+                </div>
             </section>
 
             {% if page.comments %}
@@ -71,7 +96,6 @@ Jekyll integration by somiibo.com
             </footer>
         </div>
         <!-- Footer -->
-        <!-- {% include foot.html %} -->
     </div>
     <!-- Scripts -->
     {% include scripts-main.html %} {% include tracking.html %}
