post DEV Weekly #34

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,4 +1,4 @@
-<footer id="footer">
+<!-- <footer id="footer">
     <section>
         <form method="POST" action="https://formspree.io/{{site.email}}">
             <div class="field">
@@ -38,7 +38,7 @@
             </ul>
         </section>
     </section>
-</footer>
+</footer> -->
 <!-- Copyright -->
 <div id="copyright">
     <ul>
