--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url(fruity.css);
+@import url(lato.css);
 @import url("https://fonts.googleapis.com/css?family=Merriweather:300,700,300italic,700italic|Source+Sans+Pro:900");
 
 /*
@@ -3754,7 +3755,7 @@
 
 /* Footer */
 
-	#footer {
+/*	#footer {
 		color: #717981;
 		display: -moz-flex;
 		display: -webkit-flex;
@@ -4183,7 +4184,7 @@
 			}
 
 		}
-
+*/
 	#copyright {
 		color: #ffffff;
 		position: relative;
@@ -4481,3 +4482,4 @@
 		}
 
 	}
+}
