--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1888,6 +1888,7 @@
 		-ms-transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, color 0.2s ease-in-out;
 		border: 0;
+    border-radius: 0.5em;
 		cursor: pointer;
 		display: inline-block;
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
@@ -2329,7 +2330,7 @@
 	input[type="email"],
 	select,
 	textarea {
-		border-color: #eeeeee;
+		border-radius: 0.5em;
 	}
 
 		input[type="text"]:focus,
@@ -2402,9 +2403,9 @@
 		.icon:before {
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
-			font-family: FontAwesome;
-			font-style: normal;
-			font-weight: normal;
+			/*font-family: Font Awesome 5 Free;*/
+			/*font-style: normal;*/
+			/*font-weight: normal;*/
 			text-transform: none !important;
 		}
 
@@ -2543,6 +2544,7 @@
 			cursor: default;
 			list-style: none;
 			padding-left: 0;
+			border-bottom: unset;
 		}
 
 			ul.icons li {
@@ -3030,7 +3032,7 @@
 			width: 100%;
 			height: 100%;
 			background-color: #212931;
-			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/bg.jpg");
+			background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/pic01.jpg");
 			background-size: auto,								auto,														100% auto;
 			background-position: center,								center,														top center;
 			background-repeat: repeat,								no-repeat,													no-repeat;
@@ -3291,6 +3293,10 @@
 				}
 
 		}
+
+.no_border_bottom {
+	border-bottom: inherit;
+}
 
 /* Header */
 
@@ -3602,6 +3608,7 @@
 
 			#main > .post.featured {
 				text-align: center;
+				padding: 2rem 4rem 0rem;
 			}
 
 			@media screen and (max-width: 1280px) {
@@ -4312,9 +4319,9 @@
 		#navPanelToggle:before {
 			-moz-osx-font-smoothing: grayscale;
 			-webkit-font-smoothing: antialiased;
-			font-family: FontAwesome;
-			font-style: normal;
-			font-weight: normal;
+			font-family: "Font Awesome 5 Free";
+			/*font-style: normal;*/
+			/*font-weight: normal;*/
 			text-transform: none !important;
 		}
 
@@ -4426,14 +4433,15 @@
 			#navPanel .close:before {
 				-moz-osx-font-smoothing: grayscale;
 				-webkit-font-smoothing: antialiased;
-				font-family: FontAwesome;
+				font-family: "Font Awesome 5 Free";
 				font-style: normal;
 				font-weight: normal;
 				text-transform: none !important;
 			}
 
 			#navPanel .close:before {
-				content: '\f00d';
+				content: '\f410';
+				color: black;
 				font-size: 1.25rem;
 			}
 
