--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,7 +40,7 @@ Jekyll integration by somiibo.com
                 <span>[
                   {% for tag in page.tags %}
                     {% capture tag_name %}{{ tag }}{% endcapture %}
-                    <a class="no-underline" href="/tag/{{ tag_name }}"><code class="inlinecode"><nobr>
+                    <a class="no_border_bottom" href="/tag/{{ tag_name }}"><code class="inlinecode"><nobr>
                     {{ tag_name }}
                     </nobr></code>&nbsp;</a> 
                   {% endfor %}
