--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,7 +35,7 @@ Jekyll integration by somiibo.com
                 <header class="major">
                     <span class="date">{{page.date | date_to_string}}</span>
                     <h1>{{page.title}}</h1>
-                    <p>{{page.excerpt}}</p>
+                    <p style="font-style: normal;">{{page.excerpt}}</p>
                 </header>
                 <span>[
                   {% for tag in page.tags %}
