--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1778,6 +1778,12 @@
 		padding: 0.1rem 0.2rem;
 	}
 
+	img {
+	  width: 60%;
+	  margin: auto;
+	  display: block;
+	}
+	
 	pre {
 		-webkit-overflow-scrolling: touch;
 		font-family: "Courier New", monospace;
