Add table of contents

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,6 +45,7 @@ Jekyll integration by somiibo.com
                     </nobr></code>&nbsp;</a> 
                   {% endfor %}
                 ]</span>
+                {% toc %}
                 <p>{{content}}</p>
                 <!-- {% include archive.html %} -->
                 <div class="related">
