--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1783,7 +1783,7 @@
 	  margin: auto;
 	  display: block;
 	}
-	
+
 	pre {
 		-webkit-overflow-scrolling: touch;
 		font-family: "Courier New", monospace;
@@ -4508,4 +4508,27 @@
 		}
 
 	}
+}
+
+.toc__list:before {
+	content: "Table Of Contents";
+	font-weight: bold;
+	font-size: 1.5rem;
+}
+
+.toc__list {
+	border: 2px solid #eee;
+	border-radius: 4px;
+	line-height: 1.8rem;
+	padding: 1rem 1.5rem;
+	font-weight: 600;
+}
+
+.toc__sublist li {
+	padding-left: 1.25rem;
+}
+
+#toc a {
+	text-decoration: underline;
+	border-bottom: inherit;
 }
