--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,6 +10,12 @@ Jekyll integration by somiibo.com
 <head>
     <link rel="stylesheet" href="/assets/css/footer.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <script async src="https://api.countapi.xyz/hit/bingfeng.tech/{{page.url | replace:'/','-'}}?callback=countscallback"></script>
+    <script type="text/javascript">
+        function countscallback(response) {
+            document.getElementById('visits').innerText = response.value;
+        }        
+    </script>
     {% include head.html %}
 </head>
 
@@ -35,6 +41,10 @@ Jekyll integration by somiibo.com
                 <header class="major">
                     <span class="date">{{page.date | date_to_string}}</span>
                     <h1>{{page.title}}</h1>
+                    <ul class="icons">
+                        <li><i class="fas fa-eye"></i></li>
+                        <li><span id="visits"></span></li>
+                    </ul>
                     <p style="font-style: normal;">{{page.excerpt}}</p>
                 </header>
                 <span>[
