Fix newsletter style

--- a/assets/css/footer.scss
+++ b/assets/css/footer.scss
@@ -12,6 +12,9 @@ footer {
         background: rgba(244, 246, 249, 1.0);
         box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2);
         margin-bottom: 2em;
+        margin: auto;
+        width: 80%;
+        padding: 10px;
     }
     .newsletter-container * {
         align-self: center;
