--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,11 +41,11 @@ Jekyll integration by somiibo.com
                 <header class="major">
                     <span class="date">{{page.date | date_to_string}}</span>
                     <h1>{{page.title}}</h1>
+                    <p style="font-style: normal;">{{page.excerpt}}</p>
                     <ul class="icons">
                         <li><i class="fas fa-eye"></i></li>
                         <li><span id="visits"></span></li>
                     </ul>
-                    <p style="font-style: normal;">{{page.excerpt}}</p>
                 </header>
                 <span>[
                   {% for tag in page.tags %}
@@ -95,7 +95,9 @@ Jekyll integration by somiibo.com
             <!-- Footer -->
             <footer>
                 <div class="newsletter-container">
-                    <p class="newsletter-text">Get new posts to your inbox</p>
+                    <ul class="icons">
+                        <li><i class="fas fa-rss"></i>RSS</li>
+                    </ul>
                     <!-- <p class="newsletter-text"></p> -->
                     <form class="newsletter-form" action="https://feedburner.google.com/fb/a/mailverify" method="post" target="popupwindow" onsubmit="window.open('https://feedburner.google.com/fb/a/mailverify?uri=BillsTechBlog', 'popupwindow', 'scrollbars=yes,width=550,height=520');return true">
                         <input type="hidden" value="BillsTechBlog" name="uri" />
@@ -109,7 +111,7 @@ Jekyll integration by somiibo.com
                     </form>     
                 </div>
 
-                <ul class="actions">
+                <ul class="actions" style="margin-top: 10px;">
                     <li><a href="{{ "/blog" | absolute_url }}" class="button">Return</a></li>
                 </ul>
             </footer>                
