--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,6 +9,7 @@
 	<head>
     {% include head.html %}
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	</head>
 	<body class="is-loading">
 
