--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -8,6 +8,7 @@ Jekyll integration by somiibo.com
 
 <head>
     <title>Bill's Tech Blog</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 </head>
 <html>
 
