--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,6 +18,8 @@ Jekyll integration by somiibo.com
         }        
     </script>
     {% include head.html %}
+
+    {% seo %}
 </head>
 
 <body class="is-loading">
