feat: add new posts

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,6 +17,7 @@ Jekyll integration by somiibo.com
             document.getElementById('visits').innerText = response.value;
         }        
     </script>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
     {% include head.html %}
 
     {% seo %}
